[gd_scene load_steps=11 format=3 uid="uid://ucpj4luh3ort"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_bhtn8"]
[ext_resource type="Texture2D" uid="uid://bvndx627kkwiw" path="res://assets/BackGround_2.png" id="2_ncl7v"]
[ext_resource type="Texture2D" uid="uid://4st6t1ubqxn8" path="res://assets/CellBig_03.png" id="2_u7uoc"]
[ext_resource type="Texture2D" uid="uid://dfn0qesyklejs" path="res://assets/CellBig_01.png" id="3_e1apg"]
[ext_resource type="Texture2D" uid="uid://b7hucpkwsxlpt" path="res://assets/Pixel Buttom.png" id="3_vxooq"]
[ext_resource type="Texture2D" uid="uid://mwkog826q6h4" path="res://assets/CellBig_02.png" id="4_4mtrc"]
[ext_resource type="Texture2D" uid="uid://c8roe371xm7aj" path="res://assets/Btn_V15.png" id="5_ka1m2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ljbtl"]
atlas = ExtResource("3_vxooq")
region = Rect2(0, 256.936, 64, 31.0642)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5qht"]
atlas = ExtResource("3_vxooq")
region = Rect2(128, 256, 64, 32)

[sub_resource type="LabelSettings" id="LabelSettings_njcku"]
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.8)

[node name="GameManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bhtn8")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 731.0
offset_bottom = 1056.0
scale = Vector2(0.989181, 1.22299)
texture = ExtResource("2_ncl7v")
expand_mode = 3

[node name="botaoAvancaTurno" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 263.0
offset_top = 1006.0
offset_right = 327.0
offset_bottom = 1037.0
scale = Vector2(3, 3)
texture_normal = SubResource("AtlasTexture_ljbtl")
texture_pressed = SubResource("AtlasTexture_r5qht")
stretch_mode = 5

[node name="Label" type="Label" parent="botaoAvancaTurno"]
layout_mode = 0
offset_left = 8.33333
offset_top = 4.66667
offset_right = 120.333
offset_bottom = 27.6667
scale = Vector2(0.42382, 0.42382)
text = "PRÓXIMO MÊS"
label_settings = SubResource("LabelSettings_njcku")
uppercase = true

[node name="botaoE" type="Button" parent="."]
layout_mode = 2
offset_left = 24.0
offset_top = 10.0
offset_right = 224.0
offset_bottom = 210.0
text = "Enviroment"
icon = ExtResource("2_u7uoc")
flat = true
icon_alignment = 1

[node name="progressBarE" type="TextureProgressBar" parent="botaoE"]
layout_mode = 0
offset_left = 212.0
offset_top = 60.0
offset_right = 453.0
offset_bottom = 115.0
scale = Vector2(1.16492, 1.2707)
min_value = -50.0
max_value = 50.0
texture_under = ExtResource("5_ka1m2")
texture_progress = ExtResource("5_ka1m2")
tint_under = Color(0, 0.0156863, 0, 0.301961)
tint_progress = Color(0.556863, 0.552941, 0, 1)

[node name="botaoS" type="Button" parent="."]
layout_mode = 2
offset_left = 25.0
offset_top = 206.0
offset_right = 225.0
offset_bottom = 406.0
text = "Social"
icon = ExtResource("4_4mtrc")
flat = true
icon_alignment = 1

[node name="botaoG" type="Button" parent="."]
layout_mode = 2
offset_left = 20.0
offset_top = 424.0
offset_right = 220.0
offset_bottom = 624.0
text = "Governance
"
icon = ExtResource("3_e1apg")
flat = true
icon_alignment = 1

[connection signal="pressed" from="botaoAvancaTurno" to="." method="_on_botao_avanca_turno_pressed"]
